.gitea/kubernetes/backend/strip-api-prefix-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: scoresaber-reloaded-backend-strip-api-prefix
  namespace: public-services
spec:
  stripPrefix:
    prefixes:
      - "/api-test"
