.gitea/kubernetes/backend/strip-swagger-prefix-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: scoresaber-reloaded-backend-strip-swagger-prefix
  namespace: public-services
spec:
  stripPrefix:
    prefixes:
      - "/swagger"
