.gitea/kubernetes/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoresaber-reloaded-backend
  namespace: public-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scoresaber-reloaded-backend
  template:
    metadata:
      labels:
        app: scoresaber-reloaded-backend
    spec:
      containers:
        - name: scoresaber-reloaded-backend-container
          image: git.fascinated.cc/fascinated/scoresaber-reloaded-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m # 1 vCPU
              memory: 512Mi
