.gitea/kubernetes/backend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scoresaber-reloaded-backend-service
  namespace: public-services
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: scoresaber-reloaded-backend
